--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 body {
-    background-color: white;
     margin: 0;
     padding: 0;
     font-family: "DynaPuff", system-ui;
@@ -14,12 +13,51 @@ body {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1fr .5fr 1fr;
     min-height: 100vh;
+    background: -webkit-radial-gradient(circle, white, gray, black);
 }
 .top-cell {
-    
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    & #right-text {
+        background-color: whitesmoke;
+        margin: 35px;
+        border: 5px solid black;
+        border-radius: 10% 25%;
+    }
+    & .image-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & img {
+            border-radius: 10% / 50%;
+            border-width: 15px;
+            border-style: groove;
+            border-color: black;
+            margin: 10px;
+            width: 425px;
+            height: 350px;
+        }
+    }
+    #left-text {
+        background-color: whitesmoke;
+        border: 5px solid black;
+        border-radius: 25% 10%;
+        display: grid;
+        margin: 35px;
+        & h1 {
+            display: flex;
+            justify-content: center;
+        }
+        & p {
+            display: flex;
+            justify-content: center;
+            padding: 50px;
+            line-height: 35px;
+        }
+    }
+}    
 .middle-cell {
-    background-color: whitesmoke;
+    background-color: black;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     & .middle-container {
@@ -28,6 +66,9 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 10px;
+        border: 5px solid gray;
+        border-radius: 15px;
         & #win-cookie {
             border: 5px solid gray;
             border-style: groove;
@@ -44,6 +85,9 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 10px;
+        border: 5px solid gray;
+        border-radius: 15px;
         & #satisfaction-bar {
             border: 5px solid gray;
             border-style: groove;
@@ -54,42 +98,111 @@ body {
             font-family: "DynaPuff", system-ui;
         }
     }
+    & .right-container {
+        background-color: whitesmoke;
+        margin: 10px;
+        border: 5px solid gray;
+        border-radius: 15px;
+    }
 }
 .bottom-cell {
     grid-row: span 2;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     & .satisfaction-container {
-        background-color: blue;
+        background-color: whitesmoke;
         display: flex;
         align-items: center;
         justify-content: center;
+        background: -webkit-radial-gradient(circle, white, gray, black);
         & #satisfaction-btn {
-            background: -webkit-radial-gradient(#e7dfdf, #fa0101);
-            width: 101.57px;
-            height: 101.57px;
+            background: -webkit-radial-gradient(white, rgb(245, 191, 13));
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
             box-shadow: -5px 10px 20px black, 
             5px 10px 20px gray; 
             cursor: pointer;
             font-family: "DynaPuff", system-ui;
-            font-size: 1rem;
+            font-size: 1.7rem;
         }
+        
+        & #satisfaction-btn:hover {
+            transform: scale(1.15);
+        }
+        & #satisfaction-btn:active {
+            transform: scale(1.25);
+            transition: 200ms;
+        } 
     }
     & .win-cookie-container {
-        background-color: red;
+        background-color: whitesmoke;
         display: flex;
         align-items: center;
         justify-content: center;
+        background: -webkit-radial-gradient(circle, white, gray, black);
         & #win-cookie-btn {
-            background: -webkit-radial-gradient(#e7dfdf, #fa0101);
-            aspect-ratio: 1;
+            background: -webkit-radial-gradient(white, brown);
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
             box-shadow: -5px 10px 20px black, 
             5px 10px 20px gray; 
             cursor: pointer;
             font-family: "DynaPuff", system-ui;
-            font-size: 1rem;
+            font-size: 2rem;
         }
+        & #win-cookie-btn:hover {
+            transform: scale(1.15);
+            
+        }
+        & #win-cookie-btn:active {
+            transform: scale(1.25);
+            transition: 200ms;
+        }
+    }
+    & .bottom-right-container {
+        background: -webkit-radial-gradient(circle, white, gray, black);
+    }
+}
+
+@media (max-width: 1600px){
+    .top-cell{
+        display: grid;
+        grid-template-columns: 1fr 1fr 0;
+    }
+    .image-container{
+        display: flex;
+        align-items: center;
+        & img {
+            width: 500px;
+            height: 400px;
+        }
+    }
+
+}
+
+@media (max-width: 1020px){
+    .top-cell {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .middle-cell {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        
+    }
+    #right-text, img {
+        display: none;
+    }
+}
+
+@media (max-width: 665px) {
+    .top-cell {
+        background: -webkit-radial-gradient(circle, white, gray, black);
+    }
+    .bottom-cell {
+        grid-template-columns: 1fr;
     }
 }
