--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ body {
         margin: 35px;
         border: 5px solid black;
         border-radius: 10% 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 50px;
+        line-height: 40px;
     }
     & .image-container {
         display: flex;
@@ -103,6 +109,18 @@ body {
         margin: 10px;
         border: 5px solid gray;
         border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & #cookie-jar-display {
+            border: 5px solid gray;
+            border-style: groove;
+            border-radius: 15px;
+            aspect-ratio: 4/1;
+            text-align: center;
+            font-size: 1.5rem;
+            font-family: "DynaPuff", system-ui;
+        }
     }
 }
 .bottom-cell {
@@ -158,7 +176,12 @@ body {
         }
     }
     & .bottom-right-container {
-       
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & #jar {
+            cursor: pointer;
+        }
     }
 }
 
