--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,24 @@ body {
     min-height: 100vh;
     background: -webkit-radial-gradient(circle, white, gray, black);
 }
+@keyframes animation {
+    0%   { background-color: whitesmoke;}
+    25%  { background-color: gray;}
+    50%  { background-color: black;}
+    75%  { background-color: gray;}
+    100% { background-color: whitesmoke;}
+}
+.animation {
+        animation-name: animation;
+        animation-duration: 2s;
+        animation-timing-function: ease-in-out;
+        animation-delay: 1s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+        animation-fill-mode: both;
+        animation-play-state: running;
+    }
+
 .top-cell {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
