--- a/css/style.css
+++ b/css/style.css
@@ -237,19 +237,24 @@ body {
 .top-cell{
     display: grid;
     grid-template-columns: 1fr 1fr 0;
+    grid-template-rows: 9fr 1fr;
 }
 .image-container{
     grid-row: 2;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
     & img {
-        width: 500px;
-        height: 400px;
+        display: none;
     }
 }
-    img {
-        display: none;
-    
+}
+
+@media(max-width: 1390px){
+    .top-cell {
+        background: -webkit-radial-gradient(circle, white, gray, black);
+    }
+    .bottom-cell {
+        background: -webkit-radial-gradient(circle, white, gray, black);
     }
 }
 
