--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@
     box-sizing: border-box;
 }
 body {
+    height: 100vh;
     margin: 0;
     padding: 0;
     font-family: "DynaPuff", system-ui;
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 1fr .5fr 1fr;
+    grid-template-columns: 1fr;
+    /* grid-template-rows: 1fr .5fr 1fr; */
     min-height: 100vh;
     background: -webkit-radial-gradient(circle, white, gray, black);
 }
